feat: rework tests to explicit given-when-then pattern (#82)