@@ -1,21 +1,16 @@
 package com.kiroule.campsite.booking.api.service;
 
-import static com.kiroule.campsite.booking.api.TestHelper.*;
-import static java.util.Arrays.asList;
+import static com.kiroule.campsite.booking.api.TestDataHelper.*;
+import static java.time.LocalDate.now;
 import static java.util.Collections.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assumptions.assumeFalse;
-import static org.junit.jupiter.api.Assumptions.assumeTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
-import static org.mockito.quality.Strictness.LENIENT;
 
-import com.kiroule.campsite.booking.api.CustomReplaceUnderscores;
 import com.kiroule.campsite.booking.api.DisplayNamePrefix;
 import com.kiroule.campsite.booking.api.exception.BookingDatesNotAvailableException;
 import com.kiroule.campsite.booking.api.exception.BookingNotFoundException;
-import com.kiroule.campsite.booking.api.exception.IllegalBookingStateException;
 import com.kiroule.campsite.booking.api.mapper.BookingMapper;
 import com.kiroule.campsite.booking.api.model.Booking;
 import com.kiroule.campsite.booking.api.repository.BookingRepository;
@@ -23,15 +18,12 @@ import com.kiroule.campsite.booking.api.repository.entity.BookingEntity;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.function.Executable;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
 
 /**
  * Unit tests for {@link BookingServiceImpl}.
@@ -39,423 +31,285 @@ import org.mockito.junit.jupiter.MockitoSettings;
  * @author Igor Baiborodine
  */
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = LENIENT)
-@DisplayNameGeneration(CustomReplaceUnderscores.class)
 class BookingServiceImplTest {
 
   @Mock BookingRepository bookingRepository;
 
-  @Spy BookingMapper bookingMapper;
+  @Mock BookingMapper bookingMapper;
 
   @InjectMocks BookingServiceImpl classUnderTest;
-
-  LocalDate now;
-  UUID uuid;
-  Booking existingBooking;
-  BookingEntity existingBookingEntity;
-  Booking newBooking;
-
-  BookingEntity newBookingEntity;
-  Booking createdBooking;
-
-  @BeforeEach
-  void beforeEach() {
-    now = LocalDate.now();
-    uuid = UUID.randomUUID();
-    existingBooking = null;
-    existingBookingEntity = null;
-    newBooking = null;
-    newBookingEntity = null;
-    createdBooking = null;
-  }
-
-  private void given_newBooking(int startPlusDays, int endPlusDays) {
-    newBooking = buildBooking(now.plusDays(startPlusDays), now.plusDays(endPlusDays));
-    newBooking.setActive(false);
-    assumeTrue(newBooking.isNew());
-    assumeFalse(newBooking.isActive());
-  }
-
-  private void given_existingBookingEntity(int startPlusDays, int endPlusDays) {
-    existingBooking = buildBooking(now.plusDays(startPlusDays), now.plusDays(endPlusDays), uuid);
-    existingBooking.setId(1L);
-    existingBooking.setVersion(0L);
-
-    existingBookingEntity =
-        buildBookingEntity(now.plusDays(startPlusDays), now.plusDays(endPlusDays), uuid);
-    existingBookingEntity.setId(1L);
-    existingBookingEntity.setVersion(0L);
-  }
-
-  private void given_existingBookingEntityFoundForUuidInRepository() {
-    doReturn(Optional.of(existingBookingEntity)).when(bookingRepository).findByUuid(any());
-    doReturn(existingBooking).when(bookingMapper).toBooking(any(BookingEntity.class));
-    doReturn(existingBookingEntity).when(bookingMapper).toBookingEntity(any(Booking.class));
-  }
 
   @Nested
   class FindBookingByUuid {
 
-    Booking foundBooking;
-
-    @BeforeEach
-    void beforeEach() {
-      foundBooking = null;
-    }
-
     @Test
     void happy_path() {
-      given_existingBookingEntity(1, 2);
-      given_existingBookingEntityFoundForUuidInRepository();
-
-      when_findBookingByUuid();
-
-      then_assertBookingFound();
+      // given
+      Booking booking = nextBooking();
+      BookingEntity bookingEntity = nextBookingEntity();
+      doReturn(Optional.of(bookingEntity)).when(bookingRepository).findByUuid(any());
+      doReturn(booking).when(bookingMapper).toBooking(any(BookingEntity.class));
+      // when
+      Booking result = classUnderTest.findByUuid(booking.getUuid());
+      // then
+      assertThat(result).isEqualTo(booking);
+      verify(bookingRepository).findByUuid(booking.getUuid());
+      verify(bookingMapper).toBooking(bookingEntity);
     }
 
     @Test
-    void given_non_existing_booking_uuid__then_booking_not_found_and_exception_thrown() {
-      given_noExistingBookingFoundForUuidInRepository();
-
-      when_findBookingByUuidThenAssertExceptionThrown(BookingNotFoundException.class);
-    }
-
-    private void given_noExistingBookingFoundForUuidInRepository() {
-      doReturn(Optional.empty()).when(bookingRepository).findByUuid(any());
-    }
-
-    private void when_findBookingByUuid() {
-      foundBooking = classUnderTest.findByUuid(uuid);
-    }
-
-    private void then_assertBookingFound() {
-      assertThat(foundBooking).isEqualTo(existingBooking);
-      verify(bookingRepository).findByUuid(uuid);
-      verify(bookingMapper).toBooking(existingBookingEntity);
-    }
-
-    private void when_findBookingByUuidThenAssertExceptionThrown(
-        Class<? extends Exception> exception) {
-      assertThrows(exception, () -> classUnderTest.findByUuid(any()));
+    void given_non_existing_booking_uuid__then_BookingNotFoundException_thrown() {
+      // given
+      Booking booking = nextBooking();
+      // when
+      Executable executable = () -> classUnderTest.findByUuid(booking.getUuid());
+      // then
+      assertThrows(BookingNotFoundException.class, executable);
+      verify(bookingRepository).findByUuid(booking.getUuid());
+      verify(bookingMapper, never()).toBooking(any(BookingEntity.class));
     }
   }
 
   @Nested
-  @Disabled
   class CreateBooking {
 
     @Test
     void happy_path() {
-      given_newBooking(1, 4);
-      given_foundNoExistingBookingEntitiesForDateRangeInRepository();
+      Booking booking = nextBooking().toBuilder().uuid(null).build();
+      BookingEntity bookingEntity = nextBookingEntity();
 
-      when_createBooking();
-
-      then_assertBookingCreated();
-    }
-
-    @Test
-    void
-        given_booking_dates_not_available__then_booking_dates_not_available_and_exception_thrown() {
-      given_existingBookingEntity(1, 4);
-      given_newBooking(1, 4);
-      given_foundExistingBookingForDateRangeInRepository();
-
-      when_createBookingFromNewBookingThenAssertExceptionThrown(
-          BookingDatesNotAvailableException.class);
-    }
-
-    @Test
-    void given_booking_exists__then_illegal_booking_state_exception_thrown() {
-      given_existingBookingEntity(1, 2);
-
-      when_createBookingFromExistingBookingThenAssertExceptionThrown(
-          IllegalBookingStateException.class);
-    }
-
-    private void given_foundExistingBookingForDateRangeInRepository() {
-      doReturn(singletonList(existingBookingEntity))
-          .when(bookingRepository)
-          .findForDateRangeWithPessimisticWriteLocking(any(), any(), any());
-    }
-
-    private void given_foundNoExistingBookingEntitiesForDateRangeInRepository() {
       doReturn(emptyList())
           .when(bookingRepository)
           .findForDateRangeWithPessimisticWriteLocking(any(), any(), any());
-      doReturn(newBookingEntity).when(bookingMapper).toBookingEntity(any());
-    }
-
-    private void when_createBooking() {
-      createdBooking = classUnderTest.createBooking(newBooking);
-    }
-
-    private void then_assertBookingCreated() {
-      assertThat(newBooking.isActive()).isTrue();
+      doReturn(bookingEntity).when(bookingRepository).saveAndFlush(any());
+      doReturn(bookingEntity).when(bookingMapper).toBookingEntity(any());
+      doReturn(booking).when(bookingMapper).toBooking(any(BookingEntity.class));
+      // when
+      Booking result = classUnderTest.createBooking(booking);
+      // then
+      assertThat(result).isEqualTo(booking);
       verify(bookingRepository)
           .findForDateRangeWithPessimisticWriteLocking(
-              newBooking.getStartDate(), newBooking.getEndDate(), newBooking.getCampsiteId());
-      verify(bookingRepository).save(newBookingEntity);
-      verify(bookingMapper).toBookingEntity(newBooking);
+              booking.getStartDate(), booking.getEndDate(), booking.getCampsiteId());
+      verify(bookingRepository).saveAndFlush(bookingEntity);
+      verify(bookingMapper).toBookingEntity(booking);
+      verify(bookingMapper).toBooking(bookingEntity);
     }
 
-    private void when_createBookingFromNewBookingThenAssertExceptionThrown(
-        Class<? extends Exception> exception) {
-      assertThrows(exception, () -> classUnderTest.createBooking(newBooking));
+    @Test
+    void given_booking_dates_not_available__then_BookingDatesNotAvailableException_thrown() {
+      // given
+      Booking booking = nextBooking().toBuilder().uuid(null).build();
+      Booking existingBooking =
+          nextBooking().toBuilder()
+              .startDate(booking.getStartDate())
+              .endDate(booking.getEndDate())
+              .build();
+      BookingEntity existingBookingEntity = nextBookingEntity();
+      doReturn(singletonList(existingBookingEntity))
+          .when(bookingRepository)
+          .findForDateRangeWithPessimisticWriteLocking(any(), any(), any());
+      doReturn(singletonList(existingBooking)).when(bookingMapper).toBookingsList(any());
+      // when
+      Executable executable = () -> classUnderTest.createBooking(booking);
+      // then
+      assertThrows(BookingDatesNotAvailableException.class, executable);
+      verify(bookingRepository)
+          .findForDateRangeWithPessimisticWriteLocking(
+              booking.getStartDate(), booking.getEndDate(), booking.getCampsiteId());
+      verify(bookingMapper).toBookingsList(singletonList(existingBookingEntity));
     }
 
-    private void when_createBookingFromExistingBookingThenAssertExceptionThrown(
-        Class<? extends Exception> exception) {
-      assertThrows(exception, () -> classUnderTest.createBooking(existingBooking));
+    @Test
+    void given_new_booking_has_uuid__then_IllegalArgumentException_thrown() {
+      // given
+      Booking booking = nextBooking();
+      // when
+      Executable executable = () -> classUnderTest.createBooking(booking);
+      // then
+      assertThrows(IllegalArgumentException.class, executable);
+    }
+
+    @Test
+    void given_new_booking_not_active__then_IllegalArgumentException_thrown() {
+      // given
+      Booking booking = nextBooking().toBuilder().active(false).build();
+      // when
+      Executable executable = () -> classUnderTest.createBooking(booking);
+      // then
+      assertThrows(IllegalArgumentException.class, executable);
     }
   }
 
   @Nested
-  @Disabled
   class FindVacantDates {
 
-    LocalDate startDate;
-    LocalDate endDate;
-    List<LocalDate> vacantDates;
-
-    @BeforeEach
-    void beforeEach() {
-      startDate = null;
-      endDate = null;
-      vacantDates = null;
-    }
+    private static final Long CAMPSITE_ID = 1L;
 
     @Test
     @DisplayNamePrefix("--|-|----|-|--")
     void happy_path() {
-      given_dateRange(1, 4);
-      given_noExistingBookingFoundForDateRangeInRepository();
-
-      when_findVacantDays();
-
-      then_assertVacantDaysFound(
-          startDate.datesUntil(endDate.plusDays(1)).collect(Collectors.toList()));
+      // given
+      LocalDate startDate = now().plusDays(1);
+      LocalDate endDate = now().plusDays(4);
+      List<LocalDate> bookingDates = startDate.datesUntil(endDate.plusDays(1)).toList();
+      doReturn(emptyList()).when(bookingRepository).findForDateRange(any(), any(), any());
+      // when
+      List<LocalDate> vacantDates = classUnderTest.findVacantDates(startDate, endDate, CAMPSITE_ID);
+      // then
+      assertThat(vacantDates).hasSize(bookingDates.size()).containsAll(bookingDates);
+      verify(bookingRepository).findForDateRange(startDate, endDate, CAMPSITE_ID);
     }
 
     @Test
-    void given_range_start_date_is_now__then_illegal_argument_exception_thrown() {
-      given_dateRange(0, 2);
-
-      when_findVacantDaysThenAssertExceptionThrown(IllegalArgumentException.class);
+    void given_range_start_date_is_now__then_IllegalArgumentException_thrown() {
+      // given
+      LocalDate startDate = now().plusDays(0);
+      LocalDate endDate = now().plusDays(2);
+      // then
+      Executable executable = () -> classUnderTest.findVacantDates(startDate, endDate, CAMPSITE_ID);
+      // when
+      assertThrows(IllegalArgumentException.class, executable);
     }
 
     @Test
-    void given_range_end_date_is_now__then_illegal_argument_exception_thrown() {
-      given_dateRange(2, 0);
-
-      when_findVacantDaysThenAssertExceptionThrown(IllegalArgumentException.class);
+    void given_range_end_date_is_now__then_IllegalArgumentException_thrown() {
+      // given
+      LocalDate startDate = now().plusDays(2);
+      LocalDate endDate = now().plusDays(0);
+      // then
+      Executable executable = () -> classUnderTest.findVacantDates(startDate, endDate, CAMPSITE_ID);
+      // when
+      assertThrows(IllegalArgumentException.class, executable);
     }
 
     @Test
-    void given_range_end_date_is_before_range_start_date__then_illegal_argument_exception_thrown() {
-      given_dateRange(3, 1);
-
-      when_findVacantDaysThenAssertExceptionThrown(IllegalArgumentException.class);
+    void given_range_end_date_is_before_range_start_date__then_IllegalArgumentException_thrown() {
+      // given
+      LocalDate startDate = now().plusDays(3);
+      LocalDate endDate = now().plusDays(1);
+      // then
+      Executable executable = () -> classUnderTest.findVacantDates(startDate, endDate, CAMPSITE_ID);
+      // when
+      assertThrows(IllegalArgumentException.class, executable);
     }
 
     @Test
     @DisplayNamePrefix("-S|-|----|-|E-")
     void given_booking_dates_overlap_range_dates__then_no_vacant_dates_found() {
-      given_dateRange(2, 3);
-      given_existingBookingEntity(1, 4);
-      given_existingBookingFoundForDateRangeInRepository();
+      // given
+      LocalDate startDate = now().plusDays(2);
+      LocalDate endDate = now().plusDays(3);
+      LocalDate existingStartDate = startDate.minusDays(1);
+      LocalDate existingEndDate = endDate.plusDays(1);
 
-      when_findVacantDays();
-
-      then_assertVacantDaysFound(EMPTY_LIST);
+      Booking existingBooking =
+          nextBooking().toBuilder().startDate(existingStartDate).endDate(existingEndDate).build();
+      BookingEntity existingBookingEntity =
+          nextBookingEntity().toBuilder()
+              .startDate(existingStartDate)
+              .endDate(existingEndDate)
+              .build();
+      doReturn(singletonList(existingBookingEntity))
+          .when(bookingRepository)
+          .findForDateRange(any(), any(), any());
+      doReturn(singletonList(existingBooking)).when(bookingMapper).toBookingsList(any());
+      // when
+      List<LocalDate> vacantDates = classUnderTest.findVacantDates(startDate, endDate, CAMPSITE_ID);
+      // then
+      assertThat(vacantDates).isEmpty();
+      verify(bookingRepository).findForDateRange(startDate, endDate, CAMPSITE_ID);
+      verify(bookingMapper).toBookingsList(singletonList(existingBookingEntity));
     }
 
     @Test
     @DisplayNamePrefix("--|S|----|E|--")
     void given_booking_dates_same_as_range_dates__then_end_date_found() {
-      given_dateRange(1, 4);
-      given_existingBookingEntity(1, 4);
-      given_existingBookingFoundForDateRangeInRepository();
+      // given
+      LocalDate startDate = now().plusDays(1);
+      LocalDate endDate = now().plusDays(4);
 
-      when_findVacantDays();
-
-      then_assertVacantDaysFound(singletonList(endDate));
-    }
-
-    private void given_noExistingBookingFoundForDateRangeInRepository() {
-      doReturn(EMPTY_LIST).when(bookingRepository).findForDateRange(any(), any(), any());
-    }
-
-    private void given_existingBookingFoundForDateRangeInRepository() {
+      Booking existingBooking =
+          nextBooking().toBuilder().startDate(startDate).endDate(endDate).build();
+      BookingEntity existingBookingEntity =
+          nextBookingEntity().toBuilder().startDate(startDate).endDate(endDate).build();
       doReturn(singletonList(existingBookingEntity))
           .when(bookingRepository)
           .findForDateRange(any(), any(), any());
-    }
-
-    private void given_dateRange(int startPlusDays, int endPlusDays) {
-      startDate = now.plusDays(startPlusDays);
-      endDate = now.plusDays(endPlusDays);
-    }
-
-    private void when_findVacantDays() {
-      vacantDates = classUnderTest.findVacantDays(startDate, endDate, CAMPSITE_ID);
-    }
-
-    private void when_findVacantDaysThenAssertExceptionThrown(
-        Class<? extends Exception> exception) {
-      assertThrows(exception, () -> classUnderTest.findVacantDays(startDate, endDate, CAMPSITE_ID));
-    }
-
-    private void then_assertVacantDaysFound(List<LocalDate> expected) {
-      assertThat(vacantDates).hasSize(expected.size()).hasSameElementsAs(expected);
+      doReturn(singletonList(existingBooking)).when(bookingMapper).toBookingsList(any());
+      // when
+      List<LocalDate> vacantDates = classUnderTest.findVacantDates(startDate, endDate, CAMPSITE_ID);
+      // then
+      assertThat(vacantDates).hasSize(1).contains(endDate);
+      verify(bookingRepository).findForDateRange(startDate, endDate, CAMPSITE_ID);
+      verify(bookingMapper).toBookingsList(singletonList(existingBookingEntity));
     }
   }
 
   @Nested
   class UpdateBooking {
 
-    Booking otherExistingBooking;
-    BookingEntity otherExistingBookingEntity;
-    Booking existingBookingWithNewBookingDates;
-    BookingEntity existingBookingEntityWithNewBookingDates;
-
-    @BeforeEach
-    void beforeEach() {
-      otherExistingBooking = null;
-      otherExistingBookingEntity = null;
-      existingBookingWithNewBookingDates = null;
-      existingBookingEntityWithNewBookingDates = null;
-    }
-
     @Test
     void happy_path() {
-      given_existingBookingEntity(1, 2);
-      given_existingBookingEntityFoundForUuidInRepository();
-      given_existingBookingFoundForDateRangeInRepository();
-      given_existingBookingEntityWithNewBookingDates(1, 3);
+      // given
+      Booking booking = nextBooking();
+      BookingEntity bookingEntity = nextBookingEntity();
+      Booking bookingToUpdate =
+          nextBooking().toBuilder()
+              .id(booking.getId())
+              .uuid(booking.getUuid())
+              .version(booking.getVersion())
+              .createdAt(booking.getCreatedAt())
+              .updatedAt(booking.getUpdatedAt())
+              .build();
 
-      when_updateBooking();
+      doReturn(Optional.of(bookingEntity)).when(bookingRepository).findByUuid(any());
+      doReturn(bookingEntity).when(bookingMapper).toBookingEntity(any());
 
-      then_assertBookingUpdated();
-    }
-
-    @Test
-    @Disabled
-    void given_existing_booking_canceled__then_illegal_booking_state_exception_thrown() {
-      given_existingBookingEntity(1, 2);
-      given_existingBookingEntityCanceled();
-      given_existingBookingEntityFoundForUuidInRepository();
-
-      when_updateBookingThenAssertExceptionThrown(IllegalBookingStateException.class);
-    }
-
-    @Test
-    void given_booking_dates_not_available__then_booking_dates_not_available_exception_thrown() {
-      given_existingBookingEntity(1, 2);
-      given_existingBookingEntityFoundForUuidInRepository();
-      given_otherExistingBookingEntity(2, 3);
-      given_twoBookingsFoundForDateRangeInRepository();
-
-      when_updateBookingWithNewBookingDatesThenAssertExceptionThrown(
-          1, 3, BookingDatesNotAvailableException.class);
-    }
-
-    private void given_existingBookingEntityCanceled() {
-      existingBookingEntity.setActive(false);
-    }
-
-    private void given_otherExistingBookingEntity(int startPlusDays, int endPlusDays) {
-      otherExistingBooking = buildBooking(now.plusDays(startPlusDays), now.plusDays(endPlusDays));
-      otherExistingBooking.setId(1L);
-      otherExistingBooking.setVersion(0L);
-
-      otherExistingBookingEntity =
-          buildBookingEntity(
-              now.plusDays(startPlusDays),
-              now.plusDays(endPlusDays),
-              otherExistingBooking.getUuid());
-      otherExistingBookingEntity.setId(1L);
-      otherExistingBookingEntity.setVersion(0L);
-    }
-
-    private void given_twoBookingsFoundForDateRangeInRepository() {
-      doReturn(asList(existingBookingEntity, otherExistingBookingEntity))
+      doReturn(singletonList(bookingEntity))
           .when(bookingRepository)
           .findForDateRangeWithPessimisticWriteLocking(any(), any(), any());
-    }
+      doReturn(singletonList(booking)).when(bookingMapper).toBookingsList(any());
 
-    private void given_existingBookingFoundForDateRangeInRepository() {
-      doReturn(singletonList(existingBookingEntity))
-          .when(bookingRepository)
-          .findForDateRangeWithPessimisticWriteLocking(any(), any(), any());
-    }
-
-    private void given_existingBookingEntityWithNewBookingDates(
-        int startPlusDays, int endPlusDays) {
-      existingBookingWithNewBookingDates =
-          buildBooking(now.plusDays(startPlusDays), now.plusDays(endPlusDays), uuid);
-      existingBookingEntityWithNewBookingDates =
-          bookingMapper.toBookingEntity(existingBookingWithNewBookingDates);
-    }
-
-    private void when_updateBookingThenAssertExceptionThrown(Class<? extends Exception> exception) {
-      assertThrows(exception, () -> classUnderTest.updateBooking(existingBooking));
-    }
-
-    private void when_updateBookingWithNewBookingDatesThenAssertExceptionThrown(
-        int startPlusDays, int endPlusDays, Class<? extends Exception> exception) {
-      Booking existingBookingWithUpdatedBookingDates =
-          buildBooking(now.plusDays(startPlusDays), now.plusDays(endPlusDays), uuid);
-      assertThrows(
-          exception, () -> classUnderTest.updateBooking(existingBookingWithUpdatedBookingDates));
-    }
-
-    private void when_updateBooking() {
-      classUnderTest.updateBooking(existingBookingWithNewBookingDates);
-    }
-
-    private void then_assertBookingUpdated() {
-      assertThat(existingBookingWithNewBookingDates.isActive()).isTrue();
-      verify(bookingRepository).saveAndFlush(existingBookingEntityWithNewBookingDates);
-      verify(bookingMapper, times(2)).toBookingEntity(existingBookingWithNewBookingDates);
+      doReturn(bookingEntity).when(bookingRepository).saveAndFlush(any());
+      doReturn(bookingToUpdate).when(bookingMapper).toBooking(any(BookingEntity.class));
+      // when
+      Booking result = classUnderTest.updateBooking(bookingToUpdate);
+      // then
+      assertThat(result).isEqualTo(bookingToUpdate);
+      verify(bookingRepository).findByUuid(booking.getUuid());
+      verify(bookingMapper).toBookingEntity(bookingToUpdate);
+      verify(bookingRepository)
+          .findForDateRangeWithPessimisticWriteLocking(
+              bookingToUpdate.getStartDate(),
+              bookingToUpdate.getEndDate(),
+              bookingToUpdate.getCampsiteId());
+      verify(bookingMapper).toBookingsList(singletonList(bookingEntity));
+      verify(bookingRepository).saveAndFlush(bookingEntity);
+      verify(bookingMapper, times(2)).toBooking(bookingEntity);
     }
   }
 
   @Nested
   class CancelBooking {
 
-    Boolean cancelled;
-
-    @BeforeEach
-    void beforeEach() {
-      cancelled = null;
-    }
-
     @Test
     void happy_path() {
-      given_existingBookingEntity(1, 2);
-      given_existingBookingEntityFoundForUuidInRepository();
-      given_cancelledBookingSavedInRepository();
-
-      then_cancelBooking();
-
-      then_assertCancelledBooking();
-    }
-
-    private void given_cancelledBookingSavedInRepository() {
-      doReturn(existingBookingEntity).when(bookingRepository).save(any());
-    }
-
-    private void then_cancelBooking() {
-      cancelled = classUnderTest.cancelBooking(existingBookingEntity.getUuid());
-    }
-
-    private void then_assertCancelledBooking() {
-      assertThat(cancelled).isTrue();
-      verify(bookingRepository).findByUuid(existingBookingEntity.getUuid());
-      verify(bookingRepository).save(existingBookingEntity);
-      verify(bookingMapper).toBookingEntity(existingBooking);
-      verify(bookingMapper, times(2)).toBooking(existingBookingEntity);
+      // given
+      Booking booking = nextBooking();
+      BookingEntity bookingEntity = nextBookingEntity();
+      doReturn(Optional.of(bookingEntity)).when(bookingRepository).findByUuid(any());
+      doReturn(bookingEntity).when(bookingRepository).save(any());
+      doReturn(bookingEntity).when(bookingMapper).toBookingEntity(any());
+      doReturn(booking).when(bookingMapper).toBooking(any(BookingEntity.class));
+      // when
+      boolean result = classUnderTest.cancelBooking(booking.getUuid());
+      // then
+      assertThat(result).isTrue();
+      verify(bookingRepository).findByUuid(booking.getUuid());
+      verify(bookingRepository).save(bookingEntity);
+      verify(bookingMapper).toBookingEntity(booking);
+      verify(bookingMapper, times(2)).toBooking(bookingEntity);
     }
   }
 }
